floating event alignment fixed

--- a/client/src/Css/HotNews.css
+++ b/client/src/Css/HotNews.css
@@ -125,3 +125,14 @@
     background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
   }
 }
+@media (max-width: 768px) {
+  .popup-content {
+    width: 350px;
+  }
+  .popup-content img {
+    width: 330px;
+  }
+  .hotNews-btn {
+    width: 340px;
+  }
+}
